--- a/index.html
+++ b/index.html
@@ -8,161 +8,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.10.2/dist/umd/popper.min.js" integrity="sha384-7+zCNj/IqJ95wo16oMtfsKbZ9ccEh31eOz1HGyDuCQ6wgnyJNSYdrPa03rtR1zdB" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
-    <title>PC parts picker</title>
+    <title>Focení</title>
 </head>
 <body>
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <div class="container-fluid">
-    <a class="navbar-brand" href="#">
-        <img src="images/Daco_575660.png"logo width="30" height="24">
-    </a>
-      <a class="navbar-brand" href="index.html">PC Parts picker</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
 
-      <div class="collapse navbar-collapse nav nav-masthead  float-md-end" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle" href="" id="navbarDropdownMenuLink" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                Components
-            </a>
-            <ul class="dropdown-menu dropdown-menu-dark" aria-labelledby="navbarDropdownMenuLink">
-                <li><a class="dropdown-item" href="#">Motherboards</a></li>
-                <li><a class="dropdown-item" href="#">Procesors</a></li>
-                <li><a class="dropdown-item" href="#">Graphic cards</a></li>
-            </ul>
-            </li>
-          <li class="nav-item">
-            <a class="nav-link" href="other sites/pricing.html">Pricing</a>
-          </li>
-
-          <li class="nav-item">
-            <a class="nav-link" href="other sites/abous_us.html">About us</a>
-          </li>
-        </ul>
-      </div>
-
-      <ul class="nav justify-content-end ">
-        <li class="nav-item">
-          <a class="nav-link text-warning" href="#">Log In</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link text-light" href="#">Register</a>
-        </li>
-        <li class="nav-item dropdown">
-            <a class="nav-link dropdown-toggle text-light" data-bs-toggle="dropdown" href="#" role="button" aria-expanded="false">Languages</a>
-            <ul class="dropdown-menu dropdown-menu-dark">
-              <li><a class="dropdown-item" href="#">Czech</a></li>
-              <li><a class="dropdown-item" href="#">German</a></li>
-              <li><a class="dropdown-item" href="#">France</a></li>
-            </ul>
-          </li>
-      </ul>
-    </div>
-  </nav>
-  <div class="text-center text-white bg-dark bg-gradient py-5">
-        <div class="p-5">
-          <h1 class="display-5 fw-bold text-white">Our products</h1>
-
-        <div class="text-dark container py-5 ">
-          <div class="row row-cols-1 row-cols-md-4 g-4">
-
-            <div class="col">
-              <div class="card h-100 bg-dark text-light ">
-                <img src="images/rtx.png" class="card-img-top" alt="Graphic card">
-                <div class="card-body">
-                  <h5 class="card-title ">RTX 3060Ti</h5>
-                  <p class="card-text">The nvidias newest GPU.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card h-100 border-dark bg-dark text-light" >
-                <img src="images/ryzen.png" class="card-img-top" alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Ryzen 7 3700x</h5>
-                  <p class="card-text">The best from AMD.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card h-100 border-dark bg-dark text-light">
-                <img src="images/fan.png" class="card-img-top " alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">CPU AMD Fan</h5>
-                  <p class="card-text">CPUs life saver.</p>
-                </div>
-              </div>
-            </div>
-
-            <div class="col">
-              <div class="card h-100  border-dark bg-dark text-light">
-                <img src="images/Pozadí.png" class="card-img-top " alt="...">
-                <div class="card-body">
-                  <h5 class="card-title">Thermal paste</h5>
-                  <p class="card-text">Paste it.</p>
-                </div>
-              </div>
-            </div>
-
-          </div>
-        </div>
-
-        <div class="text-center text-white">
-          <div class="py-5">
-            <h1 class=" fw-bold text-white">Our companies in the world</h1>
-          </div>
-        </div>
-
-        <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-          <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
-          </div>
-
-          <div class="carousel-inner container">
-            <div class="carousel-item active">
-              <img src="images/IT-image.jpg" class="d-block w-75 rounded mx-auto d-block" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Our American company</h5>
-                <p>We are working 24/7.</p>
-              </div>
-            </div>
-            
-            <div class="carousel-item">
-              <img src="images/GettyImages-943067460-28883b8136b24330932cd4e2855c2508.jpg" class="d-block w-75 rounded mx-auto d-block" alt="...">
-              <div class="carousel-caption d-none d-md-block">
-                <h5>Our Brasil company</h5>
-                <p>In Brasil we do not even play football.</p>
-              </div>
-            </div>
-          <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
-        </div>
-      </div>
-    </div>
-
-    <div class="container">
-      <footer class="px-5">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3 border-warning ">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-        </ul>
-        <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
-      </footer>
-    </div>
-  </div>
 </body>
 </html>
