--- a/index.html
+++ b/index.html
@@ -45,32 +45,28 @@
 
 
 
-  <div class="album py-5">
+  <div class="album py-5 ">
     <div class="container">
       <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 text-white container">
 
         <div class="col">
-          <div class="card shadow-lg bg-dark">
+          <div class="card shadow-lg bg-dark ">
             <img class="bd-placeholder-img card-img-top" width="100%" height="225" src ="./images/getthumbnail.jpg" role="img" >
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text fst-italic text-end">– We are proud partners of the Porsche</p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                </div>
-              </div>
+              <a class="btn btn-outline-warning" href="./sites/ourprojects.html" role="button">Check</a> </div>
             </div>
           </div>
         </div>
 
         <div class="col">
-          <div class="card shadow-lg bg-dark">
+          <div class="card shadow-lg bg-dark ">
             <img class="bd-placeholder-img card-img-top" width="100%" height="225" src ="./images/websitebackground.png" role="img" >
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text fst-italic text-end">– We help restore rainforests</p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                </div>
-              </div>
+              <a class="btn btn-outline-warning" href="./sites/ourprojects.html" role="button">Check</a> </div>
             </div>
           </div>
         </div>
@@ -79,11 +75,9 @@
           <div class="card shadow-lg bg-dark">
             <img class="bd-placeholder-img card-img-top" width="100%" height="225" src ="./images/1.jpg" role="img" >
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text fst-italic text-end">– We are main sponsor of the chess championship</p>
               <div class="d-flex justify-content-between align-items-center">
-                <div class="btn-group">
-                </div>
-              </div>
+              <a class="btn btn-outline-warning" href="./sites/ourprojects.html" role="button">Check</a> </div>
             </div>
           </div>
         </div>
