--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a class="navbar-brand" href="#">
         <img src="./images/icono-de-camara-gris.png" alt="Camera" width="50" height="50">
       </a>
-      <a class="navbar-brand text-warning fw-bold" href="./index.html">Darkography</a>
+      <a class="navbar-brand text-warning fw-bold border-warning border-bottom" href="./index.html">Darkography</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
@@ -39,53 +39,42 @@
 
   <div
   class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
-  style="background-image: url('./images/websitebackgroundtrees.png');">
+  style="background-image: url('./images/websitebackground.png');">
 
 
+  <div class="container px-4 py-5" id="custom-cards">
+    <h2 class="pb-2 border-bottom">Our newest projects</h2>
 
-
-
-  <div class="album py-5 ">
-    <div class="container">
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3 text-white container">
-
-        <div class="col">
-          <div class="card shadow-lg bg-dark ">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src ="./images/getthumbnail.jpg" role="img" >
-            <div class="card-body">
-              <p class="card-text fst-italic text-end">– We are proud partners of the Porsche</p>
-              <div class="d-flex justify-content-between align-items-center">
-              <a class="btn btn-outline-warning" href="./sites/ourprojects.html" role="button">Check</a> </div>
-            </div>
+    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+      <div class="col">
+        <div class="card card-cover h-100 img-fluid overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/porsche.png');">
+          <div class="d-flex h-100 p-5 pb-3 text-white text-shadow-1">
+            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Filming porsche commercial in California</h2>
           </div>
+          <a href="#" class="btn btn-dark  border-warning">Check it</a>
         </div>
+      </div>
 
-        <div class="col">
-          <div class="card shadow-lg bg-dark ">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src ="./images/websitebackground.png" role="img" >
-            <div class="card-body">
-              <p class="card-text fst-italic text-end">– We help restore rainforests</p>
-              <div class="d-flex justify-content-between align-items-center">
-              <a class="btn btn-outline-warning" href="./sites/ourprojects.html" role="button">Check</a> </div>
-            </div>
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Proudly sponsoring chess championships</h2>
           </div>
+          <a href="#" class="btn btn-dark  border-warning">Check it</a>
         </div>
+      </div>
 
-        <div class="col">
-          <div class="card shadow-lg bg-dark">
-            <img class="bd-placeholder-img card-img-top" width="100%" height="225" src ="./images/1.jpg" role="img" >
-            <div class="card-body">
-              <p class="card-text fst-italic text-end">– We are main sponsor of the chess championship</p>
-              <div class="d-flex justify-content-between align-items-center">
-              <a class="btn btn-outline-warning" href="./sites/ourprojects.html" role="button">Check</a> </div>
-            </div>
+      <div class="col">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/wallpaper.jpg');">
+          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Restoring rainforests in Africa</h2>
           </div>
+          <a href="#" class="btn btn-dark  border-warning">Check it</a>
         </div>
- 
-
       </div>
     </div>
   </div>
 
+  </div>
 </body>
 </html>
