--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -30,7 +30,7 @@
             <a class="nav-link" href="./ourprojects.html">Our projects</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./contactus.html">Contact us!</a>
+            <a class="nav-link border-warning border-bottom" href="./contactus.html">Contact us!</a>
           </li>
         </ul>
       </div>
