--- a/sites/ourprojects.html
+++ b/sites/ourprojects.html
@@ -27,7 +27,7 @@
             <a class="nav-link " aria-current="page" href="./aboutus.html">About us</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="./ourprojects.html">Our projects</a>
+            <a class="nav-link border-warning border-bottom" href="./ourprojects.html">Our projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./contactus.html">Contact us!</a>
