--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 
   <div
   class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
-  style="background-image: url('./images/websitebackground.png');">
+  style="background-image: url('./images/pozadí\ webu.png');">
 
 
   <div class="container px-4 py-5" id="custom-cards">
@@ -51,7 +51,7 @@
           <div class="d-flex h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Filming porsche commercial in California</h2>
           </div>
-          <a href="#" class="btn btn-dark  border-warning">Check it</a>
+          <a href="./sites/ourprojects.html" class="btn btn-dark  border-warning">Check it</a>
         </div>
       </div>
 
@@ -60,7 +60,7 @@
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Proudly sponsoring chess championships</h2>
           </div>
-          <a href="#" class="btn btn-dark  border-warning">Check it</a>
+          <a href="./sites/ourprojects.html" class="btn btn-dark  border-warning">Check it</a>
         </div>
       </div>
 
@@ -69,7 +69,7 @@
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Restoring rainforests in Africa</h2>
           </div>
-          <a href="#" class="btn btn-dark  border-warning">Check it</a>
+          <a href="./sites/ourprojects.html" class="btn btn-dark  border-warning">Check it</a>
         </div>
       </div>
     </div>
