--- a/sites/aboutus.html
+++ b/sites/aboutus.html
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="./aboutus.html">About us</a>
+            <a class="nav-link border-warning border-bottom" aria-current="page" href="./aboutus.html">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./ourprojects.html">Our projects</a>
