--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body class="text-white bg-dark ">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark container">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark navbar-dark bg-dark container-fluid">
     <div class="container-fluid ">
       <a class="navbar-brand" href="#">
         <img src="./images/icono-de-camara-gris.png" alt="Camera" width="50" height="50">
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="./sites/aboutus.html">About us</a>
+            <a class="nav-link" aria-current="page" href="./sites/aboutus.html">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./sites/ourprojects.html">Our projects</a>
