--- a/sites/aboutus.html
+++ b/sites/aboutus.html
@@ -12,7 +12,7 @@
 </head>
 <body class="text-white bg-dark ">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark container">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
     <div class="container-fluid ">
       <a class="navbar-brand" href="#">
         <img src="../images/icono-de-camara-gris.png" alt="Camera" width="50" height="50">
