--- a/index.html
+++ b/index.html
@@ -37,33 +37,31 @@
     </div>
   </nav>
 
-
-  <div class="bg-dark text-secondary px-4 py-5 text-center">
-    <div class="py-5">
-      <h1 class="display-5 fw-bold text-white">We are Darkography</h1>
-      <div class="col-lg-6 mx-auto">
-        <p class="fs-5 mb-4">Do you need a professional videography team of experienced people to handle the shooting and filming? Feel free to book your appointment today!</p>
-        <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-          <a href="#" class="btn btn-dark btn btn-outline-warning btn-lg px-4  fw-bold  " role="button" aria-pressed="true">Book us</a>
+  <main>
+    <div class="bg-dark text-secondary px-4 py-5 text-center">
+      <div class="py-5">
+        <h1 class="display-5 fw-bold text-white">We are Darkography</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="fs-5 mb-4">Do you need a professional videography team of experienced people to handle the shooting and filming? Feel free to book your appointment today!</p>
+          <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
+            <a href="./sites/contactus.html" class="btn btn-dark btn btn-outline-warning btn-lg px-4  fw-bold  " role="button" aria-pressed="true">Book us</a>
+          </div>
         </div>
       </div>
     </div>
-  </div>
-
+  </main>
 
   <div class="b-example-divider mb-0"></div>
-</main>
 
-  <div
-  class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
-  style="background-image: url('./images/pozadí\ webu.png');">
+
+  <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="background-image: url('./images/backgroundweb.png">
 
   <div class="container px-4 py-5" id="custom-cards">
     <h2 class="pb-2 border-bottom">Our projects</h2>
 
     <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
       <div class="col">
-        <div class="card card-cover h-100 img-fluid overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/porsche.png');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
           <div class="d-flex h-100 p-5 pb-3 text-white text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Filming porsche commercial in California</h2>
           </div>
@@ -74,14 +72,14 @@
       <div class="col">
         <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Proudly sponsoring chess championships</h2>
+            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Sponsoring chess championships</h2>
           </div>
           <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
         </div>
       </div>
 
       <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/393-africa-map.jpg');">
+        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/africa.jpg');">
           <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
             <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Restoring rainforests in Africa</h2>
           </div>
