--- a/index.html
+++ b/index.html
@@ -54,40 +54,40 @@
   <div class="b-example-divider mb-0"></div>
 
 
-  <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="background-image: url('./images/backgroundweb.png">
+  <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="background-image: url('./images/backgroundweb.png')">
 
-  <div class="container px-4 py-5" id="custom-cards">
-    <h2 class="pb-2 border-bottom">Our projects</h2>
+    <div class="container px-4 py-5" id="custom-cards">
+      <h2 class="pb-2 border-bottom">Our projects</h2>
 
-    <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
-          <div class="d-flex h-100 p-5 pb-3 text-white text-shadow-1">
-            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Filming porsche commercial in California</h2>
+      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/porsche.jpg');">
+            <div class="d-flex h-100 p-5 pb-3 text-white text-shadow-1">
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Filming porsche commercial in California</h2>
+            </div>
+            <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
           </div>
-          <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
         </div>
-      </div>
 
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Sponsoring chess championships</h2>
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Sponsoring chess championships</h2>
+            </div>
+            <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
           </div>
-          <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
         </div>
-      </div>
 
-      <div class="col">
-        <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/africa.jpg');">
-          <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
-            <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Restoring rainforests in Africa</h2>
+        <div class="col">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/africa.jpg');">
+            <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Restoring rainforests in Africa</h2>
+            </div>
+            <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
           </div>
-          <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
         </div>
       </div>
     </div>
-  </div>
 
   </div>
 </body>
