--- a/index.html
+++ b/index.html
@@ -65,16 +65,16 @@
             <div class="d-flex h-100 p-5 pb-3 text-white text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Filming porsche commercial in California</h2>
             </div>
-            <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
+            <a href="./sites/ourprojects.html" class="btn btn-dark border-warning">Check it</a>
           </div>
         </div>
 
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Sponsoring chess championships</h2>
+              <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Proudly sponsoring chess championships</h2>
             </div>
-            <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
+            <a href="./sites/ourprojects.html" class="btn btn-dark border-warning">Check it</a>
           </div>
         </div>
 
@@ -83,7 +83,7 @@
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Restoring rainforests in Africa</h2>
             </div>
-            <a href="./sites/ourprojects.html" class="btn btn-dark">Check it</a>
+            <a href="./sites/ourprojects.html" class="btn btn-dark border-warning">Check it</a>
           </div>
         </div>
       </div>
