--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.min.js" integrity="sha384-QJHtvGhmr9XOIpI6YVutG+2QOK9T+ZnN4kzFN1RtK3zEFEIsxhlmWl5/YESvpZ13" crossorigin="anonymous"></script>
     <title>Darkography</title>
 </head>
-<body class="text-white bg-dark ">
+<body class="text-white bg-dark">
 
-  <nav class="navbar sticky-top navbar-expand-lg navbar-dark navbar-dark bg-dark container-fluid">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark shadow-sm container-fluid" style="background-color: rgba(0, 0, 0, 0.2);">
     <div class="container-fluid ">
       <a class="navbar-brand" href="#">
         <img src="./images/icono-de-camara-gris.png" alt="Camera" width="50" height="50">
@@ -44,7 +44,7 @@
         <div class="col-lg-6 mx-auto">
           <p class="fs-5 mb-4">Do you need a professional videography team of experienced people to handle the shooting and filming? Feel free to book your appointment today!</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="./sites/contactus.html" class="btn btn-dark btn btn-outline-warning btn-lg px-4  fw-bold  " role="button" aria-pressed="true">Book us</a>
+            <a href="./sites/contactus.html" class="btn btn-dark btn btn-outline-warning m-3 btn-lg px-4  fw-bold  " role="button" aria-pressed="true">Book us</a>
           </div>
         </div>
       </div>
@@ -88,7 +88,39 @@
         </div>
       </div>
     </div>
-
   </div>
+
+
+  <footer class="bg-dark text-center text-white text-muted ">
+    <div class="container p-4 pb-0">
+      <section class="">
+        <form action="">
+          <div class="row d-flex justify-content-center">
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for our newsletter</strong>
+              </p>
+            </div>
+              <div class="col-md-5 col-12">
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="form5Example29" class="form-control" />
+                <label class="form-label" for="form5Example29">Email address</label>
+              </div>
+            </div>
+              <div class="col-auto">
+              <button type="submit" class="btn btn-outline-warning mb-4">
+                Subscribe
+              </button>
+            </div>
+          </div>
+        </form>
+      </section>
+    </div>
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-muted" href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ&ab_channel=RVE">ČokoKoblížky.com</a>
+    </div>
+  </footer>
+
 </body>
 </html>
