--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -12,7 +12,7 @@
 </head>
 <body class="text-white bg-dark ">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark container-fluid">
+  <nav class="navbar sticky-top navbar-expand-lg navbar-dark shadow-sm container-fluid" style="background-color: rgba(0, 0, 0, 0.2);">
     <div class="container-fluid ">
       <a class="navbar-brand" href="#">
         <img src="../images/icono-de-camara-gris.png" alt="Camera" width="50" height="50">
@@ -24,7 +24,7 @@
       <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link " aria-current="page" href="./aboutus.html">About us</a>
+            <a class="nav-link" aria-current="page" href="./aboutus.html">About us</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="./ourprojects.html">Our projects</a>
@@ -37,10 +37,36 @@
     </div>
   </nav>
 
-    <div
-        class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white"
-        style="background-image: url('./images/websitebackgroundtrees.png');">
-
+  <footer class="bg-dark text-center text-white text-muted">
+    <div class="container p-4 pb-0">
+      <section class="">
+        <form action="">
+          <div class="row d-flex justify-content-center">
+            <div class="col-auto">
+              <p class="pt-2">
+                <strong>Sign up for our newsletter</strong>
+              </p>
+            </div>
+              <div class="col-md-5 col-12">
+              <div class="form-outline form-white mb-4">
+                <input type="email" id="form5Example29" class="form-control" />
+                <label class="form-label" for="form5Example29">Email address</label>
+              </div>
+            </div>
+              <div class="col-auto">
+              <button type="submit" class="btn btn-outline-warning mb-4">
+                Subscribe
+              </button>
+            </div>
+          </div>
+        </form>
+      </section>
     </div>
+      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+      © 2022 Copyright:
+      <a class="text-muted" href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ&ab_channel=RVE">ČokoKoblížky.com</a>
+    </div>
+  </footer>
+  
 </body>
 </html>
