--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark shadow-sm container-fluid" style="background-color: rgba(0, 0, 0, 0.2);">
     <div class="container-fluid ">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="./index.html">
         <img src="./images/icono-de-camara-gris.png" alt="Camera" width="50" height="50">
       </a>
       <a class="navbar-brand text-warning fw-bold border-warning border-bottom" href="./index.html">Darkography</a>
@@ -59,7 +59,7 @@
     <div class="container px-4 py-5" id="custom-cards">
       <h2 class="pb-2 border-bottom">Our projects</h2>
 
-      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5">
+      <div class="row row-cols-1 row-cols-lg-3 align-items-stretch g-4 py-5 shadow-5-strong">
         <div class="col">
           <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/porsche.jpg');">
             <div class="d-flex h-100 p-5 pb-3 text-white text-shadow-1">
@@ -70,7 +70,7 @@
         </div>
 
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-5-strong border border-dark shadow-lg" style="background-image: url('./images/šachy.jpg');">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Proudly sponsoring chess championships</h2>
             </div>
@@ -79,7 +79,7 @@
         </div>
 
         <div class="col">
-          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 border border-dark shadow-lg" style="background-image: url('./images/africa.jpg');">
+          <div class="card card-cover h-100 overflow-hidden text-white bg-dark rounded-5 shadow-5-strong border border-dark shadow-lg" style="background-image: url('./images/africa.jpg');">
             <div class="d-flex flex-column h-100 p-5 pb-3 text-shadow-1">
               <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Restoring rainforests in Africa</h2>
             </div>
