--- a/sites/ourprojects.html
+++ b/sites/ourprojects.html
@@ -14,7 +14,7 @@
 
   <nav class="navbar sticky-top navbar-expand-lg navbar-dark shadow-sm container-fluid" style="background-color: rgba(0, 0, 0, 0.2);">
     <div class="container-fluid ">
-      <a class="navbar-brand" href="#">
+      <a class="navbar-brand" href="../index.html">
         <img src="../images/icono-de-camara-gris.png" alt="Camera" width="50" height="50">
       </a>
       <a class="navbar-brand text-warning fw-bold" href="../index.html">Darkography</a>
