--- a/index.html
+++ b/index.html
@@ -44,7 +44,8 @@
         <div class="col-lg-6 mx-auto">
           <p class="fs-5 mb-4">Do you need a professional videography team of experienced people to handle the shooting and filming? Feel free to book your appointment today!</p>
           <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-            <a href="./sites/contactus.html" class="btn btn-dark btn btn-outline-warning m-3 btn-lg px-4  fw-bold  " role="button" aria-pressed="true">Book us</a>
+            <a href="./sites/contactus.html" class="btn btn-dark btn btn-outline-warning m-3 btn-lg px-4  fw-bold" role="button" aria-pressed="true">Book us</a>
+            <a href="./sites/aboutus.html" class="btn btn-dark btn btn-outline-warning m-3 btn-lg px-4  fw-bold" role="button" aria-pressed="true">More about us</a>
           </div>
         </div>
       </div>
@@ -91,7 +92,7 @@
   </div>
 
 
-  <footer class="bg-dark text-center text-white text-muted ">
+  <footer class="bg-dark text-center text-white text-muted">
     <div class="container p-4 pb-0">
       <section class="">
         <form action="form">
