--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -37,6 +37,60 @@
     </div>
   </nav>
 
+<div
+class="p-5 text-center bg-image"
+style="
+  background-image: url('../images/yellow.png');">
+  <main>
+    <div class="text-secondary px-4 py-5 text-center">
+      <div class="py-5">
+        <h1 class="fw-bold text-white">Arrange a meeting with us</h1>
+        <div class="col-lg-6 mx-auto">
+          <p class="fs-5 mb-4">Enter your information and we will arrange a meeting to discuss your interests. Please provide order specifications in the additional information.</p>
+        </div>
+      </div>
+    </div>
+  </main>
+
+<form class="container">    
+    <div class="row mb-4">
+      <div class="col">
+        <div class="form-outline">
+          <input type="text" id="form6Example1" class="form-control" />
+          <label class="form-label" for="form6Example1">First name</label>
+        </div>
+      </div>
+      <div class="col">
+        <div class="form-outline">
+          <input type="text" id="form6Example2" class="form-control" />
+          <label class="form-label" for="form6Example2">Last name</label>
+        </div>
+      </div>
+    </div>
+    <div class="form-outline mb-4">
+      <input type="text" id="form6Example3" class="form-control" />
+      <label class="form-label" for="form6Example3">Company name</label>
+    </div>
+      <div class="form-outline mb-4">
+      <input type="text" id="form6Example4" class="form-control" />
+      <label class="form-label" for="form6Example4">Address</label>
+    </div>
+      <div class="form-outline mb-4">
+      <input type="email" id="form6Example5" class="form-control" />
+      <label class="form-label" for="form6Example5">Email</label>
+    </div>
+      <div class="form-outline mb-4">
+      <input type="number" id="form6Example6" class="form-control" />
+      <label class="form-label" for="form6Example6">Phone</label>
+    </div>
+      <div class="form-outline mb-4">
+      <textarea class="form-control" id="form6Example7" rows="4"></textarea>
+      <label class="form-label" for="form6Example7">Additional information</label>
+    </div>
+  
+    <button type="submit" class="btn btn-warning justify-content-center mb-4">Place order</button>
+  </form>
+</div>
   <footer class="bg-dark text-center text-white text-muted">
     <div class="container p-4 pb-0">
       <section class="">
