--- a/sites/aboutus.html
+++ b/sites/aboutus.html
@@ -37,6 +37,34 @@
     </div>
   </nav>
 
+  <div
+  class="p-5 text-center bg-image"
+  style="
+    background-image: url('../images/yellow.png');">
+
+<div class="text-secondary px-4 py-5">
+  <div class="py-5">
+    <h1 class="display-4 fw-bold text-white">Who we are?</h1>
+    <div class="col-lg-6 mx-auto">
+      <p class="fs-3 mb-4">We are a progressive fast growing American company providing videography services to other companies. We have a young team full of degreed professionals who feel at home on the job.</p>
+    </div>
+  </div>
+</div>
+
+<div class="container col-xxl-8 px-5 ">
+  <div class="row flex-lg-row-reverse align-items-center g-5 py-5">
+    <div class="col-10 col-sm-8 col-lg-6">
+      <img src="../images/barák.jpeg" class="d-block mx-lg-auto img-fluid" alt="Our building">
+    </div>
+    <div class="col-lg-5">
+      <h1 class="display-5 fw-bold lh-1 mb-3">Our placement</h1>
+      <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+    </div>
+  </div>
+</div>
+
+
+  </div>
   <footer class="bg-dark text-center text-white text-muted">
     <div class="container p-4 pb-0">
       <section class="">
