--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -88,7 +88,7 @@ style="
       <label class="form-label" for="form6Example7">Additional information</label>
     </div>
   
-    <button type="submit" class="btn btn-warning justify-content-center mb-4">Place order</button>
+    <button type="submit" class="btn btn-outline-warning justify-content-center mb-4">Place order</button>
   </form>
 </div>
   <footer class="bg-dark text-center text-white text-muted">
