--- a/sites/ourprojects.html
+++ b/sites/ourprojects.html
@@ -37,8 +37,13 @@
     </div>
   </nav>
 
+  <div
+class="p-5 text-center bg-image"
+style="
+  background-image: url('../images/yellow.png');">
+
   <main>
-    <div class="bg-dark text-secondary px-4 py-4 text-center">
+    <div class=" text-secondary px-4 py-4 text-center">
       <div class="py-5">
         <h1 class="display-5 fw-bold text-white">Our projects</h1>
         <div class="col-lg-6 mx-auto">
@@ -58,8 +63,8 @@
       <div class="carousel-item active">
         <img src="../images/porsche.jpg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>First slide label</h5>
-          <p>Some representative placeholder content for the first slide.</p>
+          <h5>We created a Porsche advertising campaign</h5>
+          <p>Thanks to the campaign, Porsche's sales increased 113%. </p>
         </div>
       </div>
       <div class="carousel-item">
@@ -87,7 +92,19 @@
     </button>
   </div>
 
-  <footer class="bg-dark text-center text-white text-muted py-5 ">
+  <div class="text-secondary text-center">
+    <div class="py-5">
+      <div class="col-lg-6 mx-auto">
+        <p class="fs-5">Have you decided to book us? </p>
+      </div>
+      <div class="d-grid d-sm-flex justify-content-sm-center">
+        <a href="./contactus.html" class="btn  btn btn-outline-warning m-3 btn-lg px-4  fw-bold" role="button" aria-pressed="true">Book us</a>
+      </div>
+    </div>
+  </div>
+</div>
+
+  <footer class="bg-dark text-center text-white text-muted">
     <div class="container p-4 pb-0">
       <section class="">
         <form action="">
