--- a/sites/ourprojects.html
+++ b/sites/ourprojects.html
@@ -70,15 +70,15 @@ style="
       <div class="carousel-item">
         <img src="../images/šachy.jpg" class="d-block w-100 h-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Second slide label</h5>
-          <p>Some representative placeholder content for the second slide.</p>
+          <h5>We have been the main partner of the Chess Championship for ten years.</h5>
+          <p>We also provide them with documentation needs.</p>
         </div>
       </div>
       <div class="carousel-item">
         <img src="../images/africaforest.jpeg" class="d-block w-100" alt="...">
         <div class="carousel-caption d-none d-md-block">
-          <h5>Third slide label</h5>
-          <p>Some representative placeholder content for the third slide.</p>
+          <h5>We also think about nature.</h5>
+          <p>For every order, we send 1% of our earnings to save the monkeys in the rainforest.</p>
         </div>
       </div>
     </div>
