--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
       </div>
     </div>
   </nav>
-
+  
   <main>
-    <div class="bg-dark text-secondary px-4 py-5 text-center">
+    <div class=" text-secondary px-4 py-5 text-center">
       <div class="py-5">
         <h1 class="display-5 fw-bold text-white">We are Darkography</h1>
         <div class="col-lg-6 mx-auto">
@@ -53,7 +53,6 @@
   </main>
 
   <div class="b-example-divider mb-0"></div>
-
 
   <div class="bg-image p-5 text-center shadow-1-strong rounded mb-5 text-white" style="background-image: url('./images/backgroundweb.png')">
 
