--- a/sites/aboutus.html
+++ b/sites/aboutus.html
@@ -81,11 +81,10 @@
   <footer class="bg-dark text-center text-white text-muted">
     <div class="container p-4 pb-0">
       <section class="">
-        <form action="">
           <div class="row d-flex justify-content-center">
             <div class="col-auto">
               <p class="pt-2">
-                <strong>Sign up for our newsletter</strong>
+                <strong>Zadejte sem svůj školní email <3</strong>
               </p>
             </div>
               <div class="col-md-5 col-12">
@@ -95,12 +94,11 @@
               </div>
             </div>
               <div class="col-auto">
-                <button type="submit" onclick="getVal()" class="btn btn-outline-warning mb-4">
-                  Subscribe
+              <button type="submit" onclick="getVal()" class="btn btn-outline-warning mb-4">
+                Subscribe
               </button>
             </div>
           </div>
-        </form>
       </section>
     </div>
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
