--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -104,36 +104,34 @@ style="
     <button type="submit" class="btn btn-outline-warning justify-content-center mb-4">Place order</button>
   </form>
 </div>
-  <footer class="bg-dark text-center text-white text-muted">
-    <div class="container p-4 pb-0">
-      <section class="">
-        <form action="">
-          <div class="row d-flex justify-content-center">
-            <div class="col-auto">
-              <p class="pt-2">
-                <strong>Sign up for our newsletter</strong>
-              </p>
-            </div>
-              <div class="col-md-5 col-12">
-              <div class="form-outline form-white mb-4">
-                <input type="text" id="form5Example29" placeholder="Enter text" onblur="getVal()" class="form-control" >
-                <label class="form-label" for="form5Example29">Email address</label>
-              </div>
-            </div>
-              <div class="col-auto">
-                <button type="submit" onclick="getVal()" class="btn btn-outline-warning mb-4">
-                  Subscribe
-              </button>
+<footer class="bg-dark text-center text-white text-muted">
+  <div class="container p-4 pb-0">
+    <section class="">
+        <div class="row d-flex justify-content-center">
+          <div class="col-auto">
+            <p class="pt-2">
+              <strong>Zadejte sem svůj školní email <3</strong>
+            </p>
+          </div>
+            <div class="col-md-5 col-12">
+            <div class="form-outline form-white mb-4">
+              <input type="text" id="form5Example29" placeholder="Enter text" onblur="getVal()" class="form-control" >
+              <label class="form-label" for="form5Example29">Email address</label>
             </div>
           </div>
-        </form>
-      </section>
-    </div>
-      <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-      © 2022 Copyright:
-      <a class="text-muted" href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ&ab_channel=RVE">ČokoKoblížky.com</a>
-    </div>
-  </footer>
+            <div class="col-auto">
+            <button type="submit" onclick="getVal()" class="btn btn-outline-warning mb-4">
+              Subscribe
+            </button>
+          </div>
+        </div>
+    </section>
+  </div>
+    <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
+    © 2022 Copyright:
+    <a class="text-muted" href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ&ab_channel=RVE">ČokoKoblížky.com</a>
+  </div>
+</footer>
   
 </body>
 </html>
