--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -104,9 +104,10 @@ style="
     <button type="submit" class="btn btn-outline-warning justify-content-center mb-4">Place order</button>
   </form>
 </div>
+
 <footer class="bg-dark text-center text-white text-muted">
   <div class="container p-4 pb-0">
-    <section class="bg-dark">
+    <section class="footer">
         <div class="row d-flex justify-content-center">
           <div class="col-auto">
             <p class="pt-2">
