--- a/sites/aboutus.html
+++ b/sites/aboutus.html
@@ -71,7 +71,7 @@
     </div>
     <div class="col-lg-5">
       <h1 class="display-5 fw-bold lh-1 mb-3">Our placement</h1>
-      <p class="lead">Quickly design and customize responsive mobile-first sites with Bootstrap, the world’s most popular front-end open source toolkit, featuring Sass variables and mixins, responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
+      <p class="lead text-secondary">You will find our facilitie in a mega good high rise block of flats hidden away in bright and warm California. Ring the bell.</p>
     </div>
   </div>
 </div>
