--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -65,7 +65,7 @@ style="
     </div>
   </main>
 
-<form class="container">    
+<form class="container text-muted">    
     <div class="row mb-4">
       <div class="col">
         <div class="form-outline">
