--- a/sites/ourprojects.html
+++ b/sites/ourprojects.html
@@ -105,16 +105,15 @@ style="
     </button>
   </div>
 
-  <div class="px-4 py-5 my-5">
+  <div class="px-1 py-1 my-5">
     <h1 class=" fw-bold">Bananas sent to Africa:</h1>
     <div class="progress text-center bg-dark m-5">
       <div class="progress-bar bg-warning text-dark" role="progressbar" style="width: 75%" aria-valuenow="75" aria-valuemin="0" aria-valuemax="100">1879453 bananas</div>
     </div>
   </div>
 
-
   <div class="text-secondary text-center">
-    <div class="py-5">
+    <div class="">
       <div class="col-lg-6 mx-auto">
         <p class="fs-5">Have you decided to book us? </p>
       </div>
@@ -124,8 +123,6 @@ style="
     </div>
   </div>
 </div>
-
-
 
 <footer class="bg-dark text-center text-white text-muted">
   <div class="container p-4 pb-0">
