--- a/index.html
+++ b/index.html
@@ -135,6 +135,33 @@
       </div>
   </div>
 
+  <div class="my-3 p-3 rounded rounded-5 container p-5">
+    <h6 class="fw-bold border-bottom pb-2 mb-0 text-dark text-white">latest customer reviews</h6>
+    <div class="d-flex text-muted pt-3 text-white">
+      <img class="bd-placeholder-img flex-shrink-0 me-2 rounded" src="./images/johny.jpg" width="64" height="64">
+      <p class="pb-3 mb-0 small lh-sm border-bottom text-secondary">
+        <strong class="d-block text-gray-dark">Jan Hříšný</strong>
+        Their video production really has quality. I highly recommend it!!!
+      </p>
+    </div>
+    <div class="d-flex text-muted pt-3">
+      <img class="bd-placeholder-img flex-shrink-0 me-2 rounded" src="./images/ano.jpg" width="64" height="64">
+
+      <p class="pb-3 mb-0 small lh-sm border-bottom text-secondary">
+        <strong class="d-block text-gray-dark">@bigchungus4643</strong>
+        LMfAo monkaS have good photos I won't lie yes.
+      </p>
+    </div> 
+    <div class="d-flex text-muted pt-3 ">
+      <img class="bd-placeholder-img flex-shrink-0 me-2 rounded" src="./images/monkeyprofile.jpg" width="64" height="64">
+
+      <p class="pb-3 mb-0 small lh-sm border-bottom text-secondary">
+        <strong class="d-block text-gray-dark">@monkey</strong>
+        good bananas means good company, they didn't disappoint guys!
+      </p>
+    </div>
+  </div>
+
   <footer class="bg-dark text-center text-white text-muted">
     <div class="container p-4 pb-0">
       <section class="footer">
