--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div class="col">
             <div class="card card-cover h-100 overflow-hidden text-white bg-dark border border-dark  rounded-5 shadow-lg" style="background-image: url('./images/porsche.jpg');">
               <div class="d-flex flex-column h-100 p-5 pb-3 text-white text-shadow-1">
-                <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Filming Porsche commercial in California</h2>
+                <h2 class="pt-5 mt-5 mb-4 display-6 lh-1 fw-bold">– Filming Porsche commercial</h2>
                 <ul class="d-flex list-unstyled mt-auto">
                   <li class="me-auto">
                     <img src="./images/kamerzluta.png" alt="Bootstrap" width="32" height="32" class="">
@@ -187,7 +187,7 @@
     </div>
       <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
       © 2022 Copyright:
-      <a class="text-muted" href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ&ab_channel=RVE">ČokoKoblížky.com</a>
+      <a class="text-muted" href="http://www.deutsche-abteilung-liberec.de/">ČokoKoblížky.com</a>
     </div>
   </footer>
 </body>
