--- a/sites/contactus.html
+++ b/sites/contactus.html
@@ -130,7 +130,7 @@ style="
   </div>
     <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2);">
     © 2022 Copyright:
-    <a class="text-muted" href="https://www.youtube.com/watch?v=a3Z7zEc7AXQ&ab_channel=RVE">ČokoKoblížky.com</a>
+    <a class="text-muted" href="http://www.deutsche-abteilung-liberec.de/">ČokoKoblížky.com</a>
   </div>
 </footer>
   
